# MPI-Partix

./: APItest0.cpp  APItest1.cpp  APItest2.cpp  CMakeLists.txt  LICENSE  README.md  bench1.cpp  bench2.cpp  bench3.cpp  config.sh  example1.c  example1.cpp  example2.c  example2.cpp  example3.c  example3.cpp  example4.c  example4.cpp  example5.cpp  partcom1.cpp  partcom2.cpp  partcom3.cpp  partcom4.cpp  test.c  test1.c  test1.cpp  test2.c  test2.cpp  test3.cpp  ultcorrectness1.cpp
apps/: APItest1.cpp  APItest2.cpp  APItest3.cpp  bench1.cpp  bench2.cpp  bench3.cpp  bench4.cpp  bench5.cpp  partcom1.cpp  partcom2.cpp  partcom3.cpp  partcom4.cpp  ultcorrectness1.cpp
modules/: FindArgobots.cmake  FindQthreads.cmake
scripts/: partix_plot_bw.py  run_over_overlap.sh  run_over_partsize.sh
src/: generic_types.h  partix.h  types.h
threading/: thread.h
threading/impl/ARGOBOTS/: argobots.c  argobots.cpp  argobots_types.h
threading/impl/OMP/: omp.c  omp.cpp  omp_types.h
threading/impl/PTHREADS/: pthreads.c  pthreads.cpp  pthreads_types.h
threading/impl/QTHREADS/: qthreads.c  qthreads.cpp  qthreads_types.h
